--- a/style.css
+++ b/style.css
@@ -1,22 +1,12 @@
-.table{
+table{
     margin: 0px;
-    border-top: 1px solid black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: none;
-    width: 35%;
+    width: 600px;
     text-align: left;
     padding: 1px;
 }
-.table2{
-    margin: 0px;
-    border-top: none;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
-    width: 35%;
-    text-align: left;
-    padding: 1px;
+div {
+    border: 1px solid #000;
+    width: 31.5%;
 }
 tr, td{
     padding: 10px;
